--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>npc-cli-vite</title>
+    <link href="/src/styles/main.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
