feat: remove dummy "header"

--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>npc-cli-vite</title>
+    <title>NPC CLI</title>
     <link href="/src/styles/main.css" rel="stylesheet">
   </head>
   <body>
