--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -13,6 +13,7 @@
           document.documentElement.classList.add(`theme-${theme}`);
         } catch (e) {
           console.error('Theme initialization failed', e);
+          document.documentElement.classList.add(`theme-dark`);
         }
       })();
     </script>
